@@ -1,3 +1,10 @@
+2009-02-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	Submitted by Janos Sallai:
+	patch #6542: paged_load fails on the MIB510 programming board
+	* stk500.c: Add a workaround for the different signon sequence on
+	MIB510 programmers.
+
 2009-02-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* avrdude.conf.in: Add the ATmega128RFA1.
